--- a/user_profile/my_ads.html
+++ b/user_profile/my_ads.html
@@ -15,11 +15,15 @@
     <script type='text/javascript' src='../js/jquery.js'></script>
 
     <!--Bootstrap.min.css-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
 
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
 
     <!--Font awesome for icons-->
@@ -98,18 +102,21 @@
                 <tbody>
                     <tr>
                         <td>Toyota Prius</td>
-                        <td><i class="fas fa-pencil-alt"></i></td>
-                        <td><i class="fas fa-trash-alt" style="color: red;" id="delete"></i></td>
+                        <td><button class="btn"><i class="fas fa-pencil-alt"></i></td></button>
+                        <td><button class="btn" type="button" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-trash-alt"
+                                    style="color: red;" id="delete"></i></button></td>
                     </tr>
                     <tr>
                         <td>Toyota Hiace</td>
-                        <td><i class="fas fa-pencil-alt"></i></td>
-                        <td><i class="fas fa-trash-alt" style="color: red;"></i></td>
+                        <td><button class="btn"><i class="fas fa-pencil-alt"></i></td></button>
+                        <td><button class="btn" type="button" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-trash-alt"
+                                    style="color: red;" id="delete"></i></button></td>
                     </tr>
                     <tr>
                         <td>Honda Fit</td>
-                        <td><i class="fas fa-pencil-alt"></i></td>
-                        <td><i class="fas fa-trash-alt" style="color: red;"></i></td>
+                        <td><button class="btn"><i class="fas fa-pencil-alt"></i></td></button>
+                        <td><button class="btn" type="button" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-trash-alt"
+                                    style="color: red;" id="delete"></i></button></td>
                     </tr>
                 </tbody>
             </table>
@@ -129,18 +136,21 @@
                 <tbody>
                     <tr>
                         <td>Headlights</td>
-                        <td><i class="fas fa-pencil-alt"></i></td>
-                        <td><i class="fas fa-trash-alt" style="color: red;"></i></td>
+                        <td><button class="btn"><i class="fas fa-pencil-alt"></i></td></button>
+                        <td><button class="btn" type="button" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-trash-alt"
+                                    style="color: red;" id="delete"></i></button></td>
                     </tr>
                     <tr>
                         <td>Brake Lights</td>
-                        <td><i class="fas fa-pencil-alt"></i></td>
-                        <td><i class="fas fa-trash-alt" style="color: red;"></i></td>
+                        <td><button class="btn"><i class="fas fa-pencil-alt"></i></td></button>
+                        <td><button class="btn" type="button" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-trash-alt"
+                                    style="color: red;" id="delete"></i></button></td>
                     </tr>
                     <tr>
                         <td>Gearbox</td>
-                        <td><i class="fas fa-pencil-alt"></i></td>
-                        <td><i class="fas fa-trash-alt" style="color: red;"></i></td>
+                        <td><button class="btn"><i class="fas fa-pencil-alt"></i></td></button>
+                        <td><button class="btn" type="button" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-trash-alt"
+                                    style="color: red;" id="delete"></i></button></td>
                     </tr>
                 </tbody>
             </table>
@@ -161,22 +171,66 @@
                     <tr>
                         <td>Toyota Supra</td>
                         <td><i class="fas fa-pencil-alt"></i></td>
-                        <td><i class="fas fa-trash-alt" style="color: red;"></i></td>
+                        <td><button class="btn" type="button" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-trash-alt"
+                                    style="color: red;" id="delete"></i></button></td>
                     </tr>
                     <tr>
                         <td>Nissan GTR</td>
                         <td><i class="fas fa-pencil-alt"></i></td>
-                        <td><i class="fas fa-trash-alt" style="color: red;"></i></td>
+                        <td><button class="btn" type="button" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-trash-alt"
+                                    style="color: red;" id="delete"></i></button></td>
                     </tr>
                     <tr>
                         <td>Honda S660</td>
                         <td><i class="fas fa-pencil-alt"></i></td>
-                        <td><i class="fas fa-trash-alt" style="color: red;"></i></td>
+                        <td><button class="btn" type="button" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-trash-alt"
+                                    style="color: red;" id="delete"></i></button></td>
                     </tr>
                 </tbody>
             </table>
         </div>
     </div>
+    </div>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Confirm Delete</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to delete this advertisement?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">No</button>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal" data-toggle="modal" data-target="#deletedSuccessfully">Yes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="deletedSuccessfully" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Advertisement Deleted</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    The selected advertisement has been deleted successfully
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Footer -->
@@ -209,7 +263,7 @@
                         <li><a href="#">Stay Safe on Riysewana.com</a></li>
                         <li><a href="../contactUs.html">Contact Us</a></li>
                     </ul>
-                       
+
                 </div>
                 <div class="col-sm-3">
                     <h5>About us</h5>
