--- a/user_profile/my_profile.html
+++ b/user_profile/my_profile.html
@@ -15,11 +15,15 @@
     <script type='text/javascript' src='../js/jquery.js'></script>
 
     <!--Bootstrap.min.css-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
 
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
 
     <!--Font awesome for icons-->
@@ -84,8 +88,8 @@
             </div>
             <div class="col-md-6"></div>
             <div class="col-md-12" id="center-text">
-                    <a href="./my_ads.html"><button class="btn btn-success col-sm-12 col-md-3 col-lg-3" style="margin-bottom: 20px;">
-                    <i class="fas fa-list-ul" style="margin-right: 10px;"></i>My Ads</button></a>
+                <a href="./my_ads.html"><button class="btn btn-success col-sm-12 col-md-3 col-lg-3" style="margin-bottom: 20px;">
+                        <i class="fas fa-list-ul" style="margin-right: 10px;"></i>My Ads</button></a>
                 <button class="btn btn-success col-sm-12 col-md-3 col-lg-3" style="margin-bottom: 20px;">
                     <i class="fas fa-plus-square" style="margin-right: 10px;"></i>Post Advertisement</button>
                 <button class="btn btn-success col-sm-12 col-md-3 col-lg-3" style="margin-bottom: 20px;">
@@ -125,7 +129,7 @@
                         <li><a href="#">Stay Safe on Riysewana.com</a></li>
                         <li><a href="../contactUs.html">Contact Us</a></li>
                     </ul>
-                       
+
                 </div>
                 <div class="col-sm-3">
                     <h5>About us</h5>
