--- a/user_profile/change_password.html
+++ b/user_profile/change_password.html
@@ -80,6 +80,56 @@
         </div><!-- .nav-bar -->
     </header><!-- .site-header -->
 
+
+    <script type="text/javascript">
+
+        function parentFunction1() {
+            validatePassword1()
+            validatePasswords();
+        }
+
+        function parentFunction2() {
+            validatePassword2()
+            validatePasswords();
+        }
+
+        function validatePasswords() {
+            if (document.getElementById("password1").value !== document.getElementById("password2").value) {
+                document.getElementById("password2Message").style.display = "block";
+                document.getElementById("password2Message").innerHTML = "Passwords don't match";
+            }
+            else {
+                document.getElementById("password2Message").style.display = "none";
+            }
+        }
+
+        function isValidPassword(password) {
+            var regex = /^.{8,}$/;
+            return regex.test(password);
+        }
+
+        function validatePassword1() {
+            var password1 = document.getElementById("password1").value;
+            if (!isValidPassword(password1)) {
+                document.getElementById("password1Message").style.display = "block";
+            }
+            else {
+                document.getElementById("password1Message").style.display = "none";
+            }
+        }
+
+        function validatePassword2() {
+            var password2 = document.getElementById("password2").value;
+            if (!isValidPassword(password2)) {
+                document.getElementById("password2Message").style.display = "block";
+                document.getElementById("password2Message").innerHTML = "Password should contain more than 8 characters";
+            }
+            else {
+                document.getElementById("password2Message").style.display = "none";
+            }
+        }
+
+    </script>
     <div class="container">
         <div class="row">
             <div class="col-md-6 offset-md-3" style="margin-bottom: 10px">
@@ -91,16 +141,22 @@
             <form>
                 <div class="form-group">
                     <label for="exampleInputPassword1">Old Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Old Password">
+                    <input id="oldPassword" type="password" class="form-control" id="exampleInputPassword1" placeholder="Old Password">
                 </div>
+                <div id="oldPasswordMessage" class="col-sm-12" style="display: none; color: red;">Invalid Contact No.</div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">New Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="New Password">
+                    <input onkeyup="parentFunction1()" id="password1" type="password" class="form-control" id="exampleInputPassword1"
+                        placeholder="New Password">
                 </div>
+                <div id="password1Message" class="col-sm-12" style="display: none; color: red;">Password should contain
+                    more than 8 characters</div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">Confirm New Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Confirm New Password">
+                    <input onkeyup="parentFunction2()" id="password2" type="password" class="form-control" id="exampleInputPassword1"
+                        placeholder="Confirm New Password">
                 </div>
+                <div id="password2Message" class="col-sm-12" style="display: none; color: red;">Passwords don't match</div>
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Change
                     Password</button>
             </form>
@@ -127,58 +183,58 @@
         </div>
     </div>
 
-     <!-- Footer -->
-     <footer id="myFooter" class="col-md-12 py-4" style="margin-top: 20px;">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-3">
-                        <h5>Get started</h5>
-                        <ul>
-                            <li><a href="../index.html">Home</a></li>
-                            <li><a href="#">Sign up</a></li>
-                            <li><a href="#">Downloads</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-3">
-                        <h5>Learn More</h5>
-                        <ul>
-                            <li><a href="#">How to Sell Fast</a></li>
-                            <li><a href="#">Riyasewana Compare</a></li>
-                            <li><a href="#">Buy Now on Riyasewana</a></li>
-                            <li><a href="#">Membership</a></li>
-                            <li><a href="#">Advertising</a></li>
-                            <li><a href="#">Promote Your ad</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-3">
-                        <h5>Help And Support</h5>
-                        <ul>
-                            <li><a href="#">FAQ</a></li>
-                            <li><a href="#">Stay Safe on Riysewana.com</a></li>
-                            <li><a href="../contactUs.html">Contact Us</a></li>
-                        </ul>
-                        
-                    </div>
-                    <div class="col-sm-3">
-                        <h5>About us</h5>
-                        <ul>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Career</a></li>
-                            <li><a href="../terms.html">Terms And Conditions</a></li>
-                            <li><a href="../privacy.html">Privacy Policy</a></li>
-                            <li><a href="#">Sitemap</a></li>
-                        </ul>
-                    </div>
+    <!-- Footer -->
+    <footer id="myFooter" class="col-md-12 py-4" style="margin-top: 20px;">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-3">
+                    <h5>Get started</h5>
+                    <ul>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="#">Sign up</a></li>
+                        <li><a href="#">Downloads</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h5>Learn More</h5>
+                    <ul>
+                        <li><a href="#">How to Sell Fast</a></li>
+                        <li><a href="#">Riyasewana Compare</a></li>
+                        <li><a href="#">Buy Now on Riyasewana</a></li>
+                        <li><a href="#">Membership</a></li>
+                        <li><a href="#">Advertising</a></li>
+                        <li><a href="#">Promote Your ad</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h5>Help And Support</h5>
+                    <ul>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Stay Safe on Riysewana.com</a></li>
+                        <li><a href="../contactUs.html">Contact Us</a></li>
+                    </ul>
+
+                </div>
+                <div class="col-sm-3">
+                    <h5>About us</h5>
+                    <ul>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Career</a></li>
+                        <li><a href="../terms.html">Terms And Conditions</a></li>
+                        <li><a href="../privacy.html">Privacy Policy</a></li>
+                        <li><a href="#">Sitemap</a></li>
+                    </ul>
                 </div>
             </div>
-            <div class="social-networks">
-                <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="google"><i class="fab fa-google-plus-g"></i></a>
-                <hr>
-                <b>© 2009-2018 Riyasewana.</b> 
-            </div>
-        </footer>
+        </div>
+        <div class="social-networks">
+            <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="google"><i class="fab fa-google-plus-g"></i></a>
+            <hr>
+            <b>© 2009-2018 Riyasewana.</b>
+        </div>
+    </footer>
 
 
 
