--- a/post_ads/vehicle_parts_ad.html
+++ b/post_ads/vehicle_parts_ad.html
@@ -125,7 +125,7 @@
 
                     <div class="form-group">
                         <label for="exampleInputEmail1">Price (Rs.)</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter price (negotiable)">
+                        <input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter price (negotiable)">
                     </div> 
                     
                     <div class="form-group">
